# Handwritten-Digit-Recognition

./: CMakeLists.txt  CMakeLists.txt_bak.txt  CMakeSettings.json  README.md  mnist.cpp  mnist.cpp_bak.cpp
